new proj/src/objects/GE_SS_Spares__c.object
<CustomObject>
    <fields>
        <fullName>GE_SS_Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_SS_Description__c</fullName>
        <label>Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Location__c</fullName>
        <label>Location</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Owned_By__c</fullName>
        <label>Owned By</label>
        <picklist>
            <picklistValues>
                <fullName>GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Part_Number__c</fullName>
        <label>Part Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Qty__c</fullName>
        <label>Qty</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_SS_Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Service_Ticket__c</fullName>
        <label>Service Ticket</label>
        <referenceTo>GE_SS_Service_Ticket__c</referenceTo>
        <relationshipLabel>Spares</relationshipLabel>
        <relationshipName>Spares</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_SS_Total_Cost__c</fullName>
        <formula>GE_SS_Qty__c  *  GE_SS_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Spare</label>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Spares Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spares</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>